# PROJ-TP-G13

./: Example.txt
Proj-PROG5/: ARM_table_reimplant_e3.txt  Etap1.c  Etap1.h  Etap2.c  Etap2.h  Etap3.c  Etap3.h  Etap4.c  Etap4.h  Etap5.c  Etap5.h  Makefile  Pharse1  Pharse1.c  prg  prg_1
Proj-PROG5/Docs/: Journal et la répartition des tâches.txt  Liste des fonctionnalités implémentées et manquantes.txt  Liste des éventuels bogues connus mais non resolus.txt  Liste et description des tests effectués.txt  README (Mode d'emploi).txt  Structure du code.txt
Proj-PROG5/Phase_1/: Etap1.c  Etap3.c  Etap4.h  Makefile  Pharse1.c  autop1.sh  read_data_auxiliaries.c
Proj-PROG5/Phase_2/: Disassembly_Phase2_o.txt  Disassembly_main_o.txt  Etap11.c  Etap11.h  Etap6.c  Etap6.h  Etap7.c  Etap7.h  Etap8_9.c  Etap8_9.h  Makefile  Phase2  Phase2.c  prg  (+11 more)
Proj-PROG5/elf_linker-1.0/: ARM_runner_example  Etap11.c  Etap11.h  Etap2.c  Etap2.h  Etap6.c  Etap6.h  Etap7.c  Etap7.h  Etap8_9.c  Etap8_9.h  Makefile  Makefile.am  Makefile.in  Pharse1  Phase2  Phase2.c  config.status  prg  read_data_auxiliaries.c  sample_run.sh  temp
Proj-PROG5/elf_linker-1.0/.deps/: ARM_runner_example.Po  Etap1.Po  Etap11.Po  Etap2.Po  Etap3.Po  Etap4.Po  Etap5.Po  Etap6.Po  Etap7.Po  Etap8_9.Po  Pharse1.Po  Phase2.Po  arm_simulator_interface.Po  gdb_protocol.Po  read_data_auxiliaries.Po  scanner.Po
Proj-PROG5/elf_linker-1.0/Examples_loader/: Makefile  Makefile.in  config.status  example1
Proj-PROG5/elf_linker-1.0/Examples_loader/autom4te.cache/: requests
Proj-PROG5/elf_linker-1.0/autom4te.cache/: requests
(+21 files in other folders)
